--- a/tox.ini
+++ b/tox.ini
@@ -4,9 +4,13 @@ envlist = py27, py35
 [testenv]
 commands = py.test -v
 deps =
+    pyramid
     pytest
     pytest-watch
-    future
+    pytest-cov
+    webtest
+    wtforms
+    markdown
 
 [pytest]
 addpots = --ignore==lib
