--- a/development.ini
+++ b/development.ini
@@ -15,8 +15,8 @@ pyramid.includes =
     pyramid_tm
 
 jinja2.filters =
-;    datetimeformat = journalapp.jinja2_filters.datetimeformat
-;    dateformat = journalapp.jinja2_filters.dateformat
+    dateformat_monthfull = journalapp.jinja2_filters.dateformat_monthfull
+    dateformat_day = journalapp.jinja2_filters.dateformat_day
     markdown = markdown.markdown
 
 # By default, the toolbar only appears for clients from IP addresses
