Updates to INI for clean up.

--- a/production.ini
+++ b/production.ini
@@ -5,7 +5,6 @@
 
 [app:main]
 use = egg:journalapp
-
 pyramid.reload_templates = false
 pyramid.debug_authorization = false
 pyramid.debug_notfound = false
@@ -15,8 +14,8 @@ pyramid.includes =
     pyramid_tm
 
 jinja2.filters =
-;    datetimeformat = journalapp.jinja2_filters.datetimeformat
-;    dateformat = journalapp.jinja2_filters.dateformat
+    dateformat_monthfull = journalapp.jinja2_filters.dateformat_monthfull
+    dateformat_day = journalapp.jinja2_filters.dateformat_day
     markdown = markdown.markdown
 
 [server:main]
